[package]
name = "kaitai"
version = "0.1.0"
authors = ["Klim Tsoutsman <klimusha@gmail.com>"]
edition = "2018"
description = "A macro for compiling Kaitai Struct into Rust."
readme = true
repository = "https://www.github.com/TypicalFork/kaitai-rs"
license = "MIT OR Apache-2.0"
keywords = ["binary", "cross-platform", "ks", "ksy", "ksc"]
# The last 3 categories refer to Kaitai Struct itself. I think it's fair to put them here as this
# crate exposes the power of Kaitai Struct to Rust and in a sense inherits its functionality.
categories = ["compilers", "development-tools::ffi", "files", "hardware-support", "multimedia"]

[lib]
proc-macro = true
# for cargo-readme
path = "src/lib.rs"

[dependencies]
yaml-rust = "0.4"
quote = "1"
proc-macro2 = "1"
syn = "1"

[badges]
maintenance = { status = "experimental" }
github = { repository = "TypicalFork/kaitai-rs", workflow = "CI" }
