[package]
name = "kaitai"
version = "0.1.2"
authors = ["Klim Tsoutsman <klimusha@gmail.com>"]
edition = "2018"
description = "A macro for compiling Kaitai Struct into Rust."
readme = true
repository = "https://www.github.com/tsoutsman/kaitai-rs"
license = "MIT OR Apache-2.0"
keywords = ["binary", "cross-platform", "ks", "ksy", "ksc"]
# The last 3 categories refer to Kaitai Struct itself. I think it's fair to put them here as this
# crate exposes the power of Kaitai Struct to Rust and in a sense inherits its functionality.
categories = ["compilers", "development-tools::ffi", "filesystem", "hardware-support", "multimedia"]

[lib]
# for cargo-readme
path = "src/lib.rs"

[dependencies]
byteorder = "1"
paste = "1"
thiserror = "1"
kaitai-macros = { path = "../kaitai-macros", version = "0" }

[badges]
maintenance = { status = "experimental" }
github = { repository = "TypicalFork/kaitai-rs", workflow = "CI" }
